# svm

./: -g=2  .gitignore  README.md  SECURITY.md  index.html  meson.build  meson_options.txt  package-lock.json  package.json
.github/workflows/: codacy.yml  codeql.yml  meson-linux.yml  meson-macos.yml  meson-windows.yml  meson.yml
example/: Binary.java  FizzBuzz.java  Foo.java  Hello.java  Makefile  Simple.class.mac  Simple.java  foo  main.c
example/java/: Makefile
include/: gvm_class.h  gvm_class_meta.h  gvm_const.h  gvm_constant_pool.h  gvm_magic.h  gvm_version.h  svm_attribute_info.h  svm_bit.h  svm_class.h  svm_class_file.h  svm_class_meta.h  svm_class_version.h  svm_common.h  svm_const.h  svm_constant_pool.h  svm_field_info.h  svm_file.h  svm_globals.h  svm_log.h  svm_magic.h  svm_method_info.h  svm_version.h
include/libsvm/: class.h  const.h  log.h
include/libsvm/header/: access_flags.h  constant_pool.h  fields.h  interface.h  magic.h  this_super.h  version.h
src/: class.c  class_file.c  constant_pool.c  file.c  log.c  meson.build  svm.c
src/gvm/: class_file.c  gvm.c  meson.build
src/libgvm/: class.c  constant_pool.c  magic.c  meson.build  version.c
src/libgvm/docs/: Doxyfile.in  meson.build
src/libsvm/: class.c  constant_pool.c  constant_pool_switch.c  magic.c  meson.build  version.c
src/libsvm/docs/: Doxyfile.in  README.md  meson.build
src/libsvm/header/: access_flags.c  constant_pool.c  constant_pool_switch.c  fields.c  interface.c  magic.c  this_super.c  version.c
src/shared/: log.c
src/svm/: class_file.c  meson.build  svm.c
